# file-sync-server

./: Cargo.toml  config.json  update_assets.sh
.github/workflows/: release.yml
src/: error.rs  main.rs  opt.rs  router.rs
