[package]
name = "file-sync-server"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
salvo = { version = "0.76.0", features = ["rustls", "force-https", "basic-auth", "logging"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
lazy_static = "1.5.0"
